--- a/application.json
+++ b/application.json
@@ -18,6 +18,10 @@
   "icon": "bicycle",
   "pages": [
     {
+      "id": "Investors",
+      "isDefault": false
+    },
+    {
       "id": "Page1",
       "isDefault": true
     }
